--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,21 +6,32 @@ services:
     container_name: palworld-server
     stop_grace_period: 30s  # Set to however long you are willing to wait for the container to gracefully stop
     ports:
-      - 8211:8211/udp
-      - 27015:27015/udp  # Required if you want your server to show up in the community servers tab
+      - target: 8211
+        published: 8211
+        protocol: udp
+        mode: host
+      - target: 27015
+        published: 27015
+        protocol: udp
+        mode: host  # Required if you want your server to show up in the community servers tab
+      - target: 25575
+        published: 25575
+        protocol: tcp
+        mode: host  # Required if you want to use RCON
     environment:
       - PUID=1000
       - PGID=1000
       - PORT=8211  # Optional but recommended
-      - PLAYERS=16  # Optional but recommended
-      - SERVER_PASSWORD=worldofpals  # Optional but recommended
+      - PLAYERS=32  # Optional but recommended
+      - SERVER_PASSWORD=@404@404  # Optional but recommended
       - MULTITHREADING=true
       - RCON_ENABLED=true
       - RCON_PORT=25575
-      - TZ=UTC
-      - ADMIN_PASSWORD=adminPasswordHere
-      - COMMUNITY=false  # Enable this if you want your server to show up in the community servers tab, USE WITH SERVER_PASSWORD!
-      - SERVER_NAME=World of Pals
-      - SERVER_DESCRIPTION=palworld-server-docker by Thijs van Loef
+      - TZ=Asia/Shanghai
+      - ADMIN_PASSWORD=@404@404@404
+      - COMMUNITY=true  # Enable this if you want your server to show up in the community servers tab, USE WITH SERVER_PASSWORD!
+      - PUBLIC_IP=
+      - SERVER_NAME=[ES404]PalCompany
+      - SERVER_DESCRIPTION=palworld-server-docker by Embedded Steam Studio
     volumes:
       - ./palworld:/palworld/
